arrumando o layout, removendo o meu nome e colocando o fork-me badge

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
 
 <style>
-body { margin: 0; font-size: 100%; font-family: Helvetica, Arial, sans-serif; }
+body { margin: 0; font-size: 100%; font-family: Helvetica, Arial, sans-serif; background: #000; }
 .wrapper { width : 480px; margin: 0 auto; }
-
 header, footer, section { float: left; width: 100%; clear: both; }
-
-header { text-align: right; }
+header { text-align: right; background: #fff; }
 header h2 { font-size: 90%; }
+section { background: #fff; padding: 0 0 40px 0; }
 ul { padding: 0; }
 ul li { list-style: none; padding: 20px 10px; border-bottom: 2px #eee dotted; }
 .buttons { float: right; }
@@ -24,13 +23,15 @@ ul li { list-style: none; padding: 20px 10px; border-bottom: 2px #eee dotted; }
 .submit { text-align: right; }
 .submit input { border: none; background: transparent; text-transform: lowercase; cursor: pointer; }
 .submit input:hover { border-bottom: 1px dotted black; }
-footer { margin: 40px 0 0 0; padding: 20px 0 20px 0; text-align: right; font-size: 12px; background: #000; color: #fff; }
+footer { padding: 25px 0 20px 0; text-align: right; font-size: 12px; background: #000; color: #fff; }
 footer a { color: orange; }
 </style>
 
 </head>
 <body>
-
+<a href="http://github.com/rafaelbandeira3/cabrito">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+</a>
 <header>
    <div class="wrapper">
      <hgroup>
@@ -98,7 +99,7 @@ footer a { color: orange; }
 
 <footer>
   <div class="wrapper">
-    Rafael Bandeira - <a href="http://twitter.com/rafb3">@rafb3</a> | nenhum direito reservado.
+    Feito durante o <a href="http://rsrails.com.br">#rsonrails 2010</a>. Nenhum direito reservado.
   </div>
 </footer>
 
